# del-glow

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 01_array_xyrgb.rs  02_trimesh3.rs  03_trimesh3_texture.rs  04_trimesh3_pick.rs  05_trimesh3_select.rs  06_polyloop2s_inclusion.rs
src/: drawer_array_xyrgb.rs  drawer_circle2.rs  drawer_edge2.rs  drawer_elem2vtx_vtx2xyz.rs  drawer_elem2vtx_vtx2xyz_vtx2uv.rs  drawer_mesh.rs  drawer_mesh2_at_multiple_loc2s.rs  drawer_mesh_tex.rs  drawer_tri2node2xyz_tri2node2rgb.rs  drawer_vtx2xyrgb.rs  drawer_vtx2xyz.rs  lib.rs
