[package]
name = "del-glow"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
glow = "0.16.0"
env_logger = "0.11.6"
bytemuck = "1.22.0"
num-traits = "0.2.19"
image = "0.25.5"
arrayref = "0.3.9"
# del-msh-cpu = { path = "../del-msh/del-msh-cpu" }
del-geo-core = { path = "../del-geo/del-geo-core" }
